# website-rs

./: README.md  wrangler.toml
webterm/: .gitignore  Cargo.toml  Dioxus.toml  wrangler.toml
webterm/assets/: blue-everywhere.css  blue-everywhere.css.br  main.css  main.css.br  matrix-inspired.css  matrix-inspired.css.br  modern.css  modern.css.br  terminal_prompt.css  terminal_prompt.css.br  vintage-terminal.css  vintage-terminal.css.br
webterm/src/: main.rs
